# vcpkg-example-project

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
src/: main.cpp
