CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
SET(CMAKE_CXX_STANDARD 20)
PROJECT(vcpkg-example-project)
SET(PROJECT_VERSION 0.0.1)
INCLUDE(GNUInstallDirs) # CMAKE_INSTALL_INCLUDEDIR / CMAKE_INSTALL_LIBDIR / ...

INCLUDE_DIRECTORIES(include)
SET(SRCS)
AUX_SOURCE_DIRECTORY(src SRCS)

ADD_LIBRARY(${PROJECT_NAME} ${SRCS})
ADD_LIBRARY(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})