CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
SET(CMAKE_CXX_STANDARD 20)
PROJECT(vcpkg-example-project)
SET(PROJECT_VERSION 0.0.1)
INCLUDE(GNUInstallDirs) # CMAKE_INSTALL_INCLUDEDIR / CMAKE_INSTALL_LIBDIR / ...

FIND_PACKAGE(spdlog CONFIG REQUIRED)
find_package(port-example CONFIG REQUIRED)

INCLUDE_DIRECTORIES(include)
SET(SRCS)
AUX_SOURCE_DIRECTORY(src SRCS)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} spdlog::spdlog port-example::port-example)